--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -50,6 +50,9 @@ jobs:
     - name: Build everything
       run: ./gradlew build
 
+    - name: Publish to Maven Local
+      run: ./gradlew publishToMavenLocal
+
     # We stop gradle at the end to make sure the cache folders
     # don't contain any lock files and are free to be cached.
     - name: Stop Gradle
