--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -18,15 +18,13 @@ jobs:
           - 1.3.72
           - 1.4-M1
 
+    env:
+      KOTLIN_VERSION: ${{ matrix.kotlin-version }}
+
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
-
-    - name: Set environment variables
-      uses: allenevans/set-env@v1.0.0
-      with:
-        KOTLIN_VERSION: ${{ matrix.kotlin-version }}
-
+      
     - name: Cache Gradle Caches
       uses: actions/cache@v1
       with:
