--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -48,6 +48,18 @@ jobs:
     - name: Build everything
       run: ./gradlew build
 
+    - name: Publish to Maven Local
+      run: ./gradlew publishToMavenLocal
+      env:
+        ORG_GRADLE_PROJECT_SIGNING_KEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNING_KEY }}
+        ORG_GRADLE_PROJECT_SIGNING_PWD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNING_PWD }}
+
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: 'chucker-local-artifacts-${{ matrix.kotlin-version }}'
+        path: '~/.m2/repository/'
+
     # We stop gradle at the end to make sure the cache folders
     # don't contain any lock files and are free to be cached.
     - name: Stop Gradle
