Fix the CI setup for build on forks
With the previous commit I accidentally broke the
CI builds coming from external forks.
Forks don't have access to this ORG secrets so
the publishToMavenLocal task was failing as the
environment variables were blank.

Moreover I'm also disabling the publishing workflow for forks.

--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -86,7 +86,7 @@ afterEvaluate {
 
     def signingKey = findProperty("SIGNING_KEY")
     def signingPwd = findProperty("SIGNING_PWD")
-    if (signingKey != null && signingPwd != null) {
+    if (signingKey && signingPwd) {
         signing {
             useInMemoryPgpKeys(signingKey, signingPwd)
             sign publishing.publications.release
