--- a/.github/workflows/auto_revert.yaml
+++ b/.github/workflows/auto_revert.yaml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.comment.body, '/revert')
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout the latest code
+        uses: actions/checkout@v2
       - name: Automatic Revert
         uses: srt32/revert@v0.0.1
         env:
