--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,13 @@ buildscript {
         leakcanaryVersion = '2.2'
 
         // Testing
+        androidxTestCoreVersion = '1.2.0'
         junitGradlePluignVersion = '1.6.0.0'
-        junitVersion = '5.6.0'
+        junitVersion = '5.6.2'
         mockkVersion = '1.9.3'
+        robolectricVersion = '4.3'
         truthVersion = '1.0.1'
+        vintageJunitVersion = '4.13'
     }
 
     repositories {
