--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         constraintLayoutVersion = '1.1.3'
         materialComponentsVersion = '1.1.0'
         roomVersion = '2.2.5'
+        fragmentVersion = '1.2.5'
         lifecycleVersion = '2.2.0'
         androidXCoreVersion = '2.1.0'
         paletteKtxVersion = '1.0.0'
