--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,9 @@ updates:
       schedule:
         interval: "weekly"
       open-pull-requests-limit: 10
-      milestone: "3.3.0"
+      reviewers:
+      - "cortinico"
+      - "vbuberen"
       ignore:
         - dependency-name: com.squareup.okhttp3:logging-interceptor
           versions: "> 3.12.10"
