--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,25 +4,23 @@
 version: 2
 updates:
 # Updates for Github Actions used in the repo
-- package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-# Updates for Gradle dependencies used in the library
-- package-ecosystem: gradle
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
-    milestone: 3.3.0
-    ignore:
-    - dependency-name: com.squareup.okhttp3:logging-interceptor
-      versions:
-      - "> 3.12.10"
-    - dependency-name: com.squareup.okhttp3:mockwebserver
-      versions:
-      - "> 3.12.10"
-    - dependency-name: com.squareup.okhttp3:okhttp
-      versions:
-      - "> 3.12.10"
-    
+    - package-ecosystem: "github-actions"
+      directory: "/"
+      schedule:
+        interval: "weekly"
+# Updates for Gradle dependencies used in the app      
+    - package-ecosystem: gradle
+      directory: "/"
+      schedule:
+        interval: "weekly"
+      open-pull-requests-limit: 10
+      reviewers:
+      - "cortinico"
+      - "vbuberen"
+      ignore:
+        - dependency-name: com.squareup.okhttp3:logging-interceptor
+          versions: "> 3.12.10"
+        - dependency-name: com.squareup.okhttp3:mockwebserver
+          versions: "> 3.12.10"
+        - dependency-name: com.squareup.okhttp3:okhttp
+          versions: "> 3.12.10"
