--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,3 +24,5 @@ updates:
           versions: "> 3.12.10"
         - dependency-name: com.squareup.okhttp3:okhttp
           versions: "> 3.12.10"
+        - dependency-name: com.squareup.retrofit2:retrofit
+          versions: "> 2.6.4"
