Add pre-commit hook and task to install it

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,14 @@ allprojects {
     }
 }
 
+task installGitHook(type: Copy) {
+    from new File(rootProject.rootDir, 'pre-commit')
+    into { new File(rootProject.rootDir, '.git/hooks') }
+    fileMode 0777
+}
+
 task clean(type: Delete) {
+    dependsOn(installGitHook)
     delete rootProject.buildDir
 }
 
