Make some dependencies api in library build.gradle
Fixes #415

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    implementation "com.squareup.okhttp3:okhttp:$okhttp3Version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    api "com.squareup.okhttp3:okhttp:$okhttp3Version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
