--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = System.getenv("KOTLIN_VERSION") ?: '1.3.72'
+        kotlinVersion = '1.4.0'
         androidGradleVersion = '4.0.1'
         coroutineVersion = '1.3.8'
 
@@ -40,7 +40,6 @@ buildscript {
         jcenter()
         google()
         gradlePluginPortal()
-        maven { url("https://dl.bintray.com/kotlin/kotlin-eap") }
     }
 
     dependencies {
@@ -60,7 +59,6 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven { url("https://dl.bintray.com/kotlin/kotlin-eap") }
     }
 
     tasks.withType(Test) {
