Add branches for workflow_dispatch event

--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches: 
       - '*'
-  workflow_dispatch
+  workflow_dispatch:
+    branches:
+      - '*'
 
 jobs:
   test:
