--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,5 +1,5 @@
 name: Validate Gradle Wrapper
-on: 
+on:
   push:
       branches:
       - develop 
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches: 
       - '*'
-  workflow_dispatch
+  workflow_dispatch:
+    branches:
+      - '*'
 
 jobs:
   validation:
