--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         coroutineVersion = '1.3.8'
 
         // Google libraries
+        coreLibraryDesugaringVersion = '1.0.9'
         appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
         materialComponentsVersion = '1.1.0'
