--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,8 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=3.3.0-SNAPSHOT
-# 3*100*100 + 2*100 + 0 => 30200
+VERSION_NAME=3.3.0
+# 3*100*100 + 3*100 + 0 => 30300
 VERSION_CODE=30300
 GROUP=com.github.chuckerteam.chucker
 
