--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=3.3.0
-# 3*100*100 + 3*100 + 0 => 30300
-VERSION_CODE=30300
+VERSION_NAME=3.3.1-SNAPSHOT
+# 3*100*100 + 3*100 + 1 => 30301
+VERSION_CODE=30301
 GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
