--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=3.4.0
-# 3*100*100 + 4*100 + 0 => 30400
-VERSION_CODE=30400
+VERSION_NAME=3.4.1-SNAPSHOT
+# 3*100*100 + 4*100 + 1 => 30401
+VERSION_CODE=30401
 GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
