Fix broken lint and add it to GH Actions

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -41,6 +41,7 @@ android {
     lintOptions {
         warningsAsErrors true
         abortOnError true
+        disable 'AcceptsUserCertificates'
     }
 
     compileOptions {
