--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -55,6 +55,27 @@ jobs:
     - name: Stop Gradle
       run: ./gradlew --stop
 
+  lint:
+    runs-on: [ubuntu-latest]
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Cache Gradle Folders
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches/
+            ~/.gradle/wrapper/
+          key: cache-gradle-${{ hashFiles('build.gradle') }}
+          restore-keys: cache-gradle-
+
+      - name: Run lint
+        run: ./gradlew lint
+
+      - name: Stop Gradle
+        run: ./gradlew --stop
+
   ktlint:
     runs-on: [ubuntu-latest]
 
