Disable BuildConfig generation in library modules and in sample

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -11,6 +11,10 @@ android {
         ]
     }
 
+    buildFeatures {
+        buildConfig = false
+    }
+
     defaultConfig {
         minSdkVersion rootProject.minSdkVersion
     }
