--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
         kotlinVersion = '1.4.31'
-        androidGradleVersion = '4.1.2'
-        coroutineVersion = '1.4.2'
+        androidGradleVersion = '4.1.3'
+        coroutineVersion = '1.4.3'
 
         // Google libraries
         activityVersion = '1.2.1'
@@ -10,7 +10,7 @@ buildscript {
         constraintLayoutVersion = '2.0.4'
         materialComponentsVersion = '1.3.0'
         roomVersion = '2.2.6'
-        fragmentVersion = '1.3.0'
+        fragmentVersion = '1.3.1'
         lifecycleVersion = '2.3.0'
         androidXCoreVersion = '2.1.0'
         paletteKtxVersion = '1.0.0'
@@ -22,12 +22,12 @@ buildscript {
         wireVersion = '3.6.1'
 
         // Debug and quality control
-        binaryCompatibilityValidator = '0.2.4'
-        detektVersion = '1.14.0'
+        binaryCompatibilityValidator = '0.5.0'
+        detektVersion = '1.16.0'
         dokkaVersion = '1.4.20'
-        ktLintVersion = '0.40.0'
-        ktLintGradleVersion = '9.4.1'
-        leakcanaryVersion = '2.6'
+        ktLintVersion = '0.41.0'
+        ktLintGradleVersion = '10.0.0'
+        leakCanaryVersion = '2.6'
 
         // Testing
         androidxTestCoreVersion = '1.3.0'
