Remove Gradle plugin portal from allprojects, add missing dependencies from jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,12 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        gradlePluginPortal()
+        jcenter {
+            content {
+                includeModule("org.jetbrains.trove4j", "trove4j")
+                includeModule("org.jetbrains.kotlinx", "kotlinx-html-jvm")
+            }
+        }
     }
 
     tasks.withType(Test) {
