Update lint options for no-op module and sample

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -22,6 +22,10 @@ android {
     lintOptions {
         warningsAsErrors true
         abortOnError true
+        // We don't want to impose RTL on consuming applications.
+        disable 'RtlEnabled'
+        // Don't fail build if some dependencies outdated
+        disable 'GradleDependency'
     }
 }
 
