--- a/.github/workflows/publish-snapshot.yaml
+++ b/.github/workflows/publish-snapshot.yaml
@@ -2,7 +2,7 @@ name: Publish Snapshot
 on:
   push:
     branches:
-      - develop 
+      - develop
 
 jobs:
   publish:
@@ -10,6 +10,11 @@ jobs:
     runs-on: [ubuntu-latest]
 
     steps:
+    - name: Cancel Previous Runs
+      uses: styfle/cancel-workflow-action@0.9.0
+      with:
+        access_token: ${{ github.token }}
+
     - name: Checkout Repo
       uses: actions/checkout@v2
 
