--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ buildscript {
         robolectricVersion = '4.5.1'
         truthVersion = '1.1.3'
         vintageJunitVersion = '4.13'
+
+        // Publishing
+        nexusStagingPlugin = '0.30.0'
     }
 
     repositories {
@@ -52,9 +55,11 @@ buildscript {
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktLintGradleVersion"
         classpath "org.jetbrains.kotlinx:binary-compatibility-validator:$binaryCompatibilityValidator"
         classpath "com.squareup.wire:wire-gradle-plugin:$wireVersion"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:$nexusStagingPlugin"
     }
 }
 apply plugin: 'binary-compatibility-validator'
+apply plugin: 'io.codearte.nexus-staging'
 
 apiValidation {
     ignoredProjects += ["sample"]
@@ -101,4 +106,10 @@ ext {
     minSdkVersion = 21
     targetSdkVersion = 30
     compileSdkVersion = 30
+}
+
+nexusStaging {
+    username = findProperty("NEXUS_USERNAME")
+    password = findProperty("NEXUS_PASSWORD")
+    stagingProfileId = "ea09119de9f4"
 }
