--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ buildscript {
         androidxTestCoreVersion = '1.4.0'
         junitGradlePluignVersion = '1.7.1.1'
         junitVersion = '5.7.2'
+        junit4Version = '4.13.2'
         mockkVersion = '1.12.0'
         robolectricVersion = '4.6.1'
         truthVersion = '1.1.3'
-        vintageJunitVersion = '4.13'
 
         // Publishing
         nexusStagingPlugin = '0.30.0'
