--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -1,5 +1,5 @@
 build:
-  maxIssues: 1
+  maxIssues: 0
   weights:
     # complexity: 2
     # LongParameterList: 1
@@ -14,6 +14,9 @@ complexity:
   ComplexCondition:
     active: true
     threshold: 5
+  LongMethod:
+    active: true
+    excludes: ['**/test/**', '**/androidTest/**']
   LongParameterList:
     active: true
     ignoreDefaultParameters: true
