--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -43,6 +43,7 @@ ext.versionName = { ->
 def libraryGroupId = 'com.meesho.android.chucker'
 def libraryVersion = versionName()
 
+artifactoryPublish.dependsOn('build')
 publishing {
     publications {
         aar(MavenPublication) {
